--- a/catalog_app/templates/base.html
+++ b/catalog_app/templates/base.html
@@ -15,10 +15,11 @@
       <div class="col-sm-2">
       {% block sidebar %}
         <ul class="sidebar-nav">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="{% url 'books' %}">All books</a></li>
+          <li><a href="{% url 'catalog_app:index' %}">Home</a></li>
+          <li><a href="{% url 'catalog_app:books' %}">All books</a></li>
           <li><a href="">All authors</a></li>
         </ul>
+        <button onclick="location.href='{% url 'login_app:logout' %}';">Logout</button>
      {% endblock %}
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
