--- a/catalog_app/templates/index.html
+++ b/catalog_app/templates/index.html
@@ -4,7 +4,8 @@
   <h1>Library Home</h1>
   <p>The library has:</p>
   <ul>
-    <li><strong>Books:</strong> {{ num_books }}</li>
-    <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Books:</strong> {{ num_books }}
+    <ul><li><strong>Authors:</strong> {{ num_authors }}</li></ul></li>
+    <li><strong>Magazines:</strong> {{ num_magazines }}</li>
   </ul>
 {% endblock %}
