--- a/catalog_app/templates/base.html
+++ b/catalog_app/templates/base.html
@@ -18,10 +18,14 @@
           <li><a href="{% url 'catalog_app:index' %}">Home</a></li>
           <li><a href="{% url 'catalog_app:books' %}">Available books</a></li>
           <li><a href="{% url 'catalog_app:magazines' %}">Available magazines</a></li>
-          <li><a href="">All authors</a></li>
+          {% if request.user.is_staff %} 
+          <li><a href="{% url 'catalog_app:past_due' %}">Past due</a></li>
+          {% else %} 
+          <li><a href="">My check-outs</a></li>
+          {% endif %}
         </ul>
         <button onclick="location.href='{% url 'login_app:logout' %}';">Logout</button>
-     {% endblock %}
+      {% endblock %}
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
     </div>
