--- a/catalog_app/templates/book_list.html
+++ b/catalog_app/templates/book_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+  {% block title %}<title>Available Books</title>{% endblock %}
 {% block content %}
   <h1>Available books</h1>
   {% if book_list %}
