--- a/catalog_app/templates/magazine_list.html
+++ b/catalog_app/templates/magazine_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% block title %}<title>Available magazines</title>{% endblock %}
 {% block content %}
   <h1>Available magazines</h1>
   {% if magazine_list %}
