--- a/catalog_app/templates/base.html
+++ b/catalog_app/templates/base.html
@@ -21,10 +21,10 @@
           {% if request.user.is_staff %} 
           <li><a href="{% url 'catalog_app:past_due' %}">Past due</a></li>
           {% else %} 
-          <li><a href="{% url 'catalog_app:my_books' %}">My check-outs</a></li>
+          <li><a href="{% url 'catalog_app:my_books' %}">My books/magazines</a></li>
           {% endif %}
         </ul>
-        <button onclick="location.href='{% url 'login_app:logout' %}';">Logout</button>
+        <button onclick="location.href='{% url 'login_app:logout' %}'">Logout</button>
       {% endblock %}
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
