Does not render check-out button if user is staff.

--- a/catalog_app/templates/book_list.html
+++ b/catalog_app/templates/book_list.html
@@ -9,11 +9,13 @@
         {{ book.title }} ({{book.author}}) 
       </li>
       {{book.genre_names}}
-      <form method="POST" action="{% url 'catalog_app:check_out_book' %}">
-      {% csrf_token %}
-      <button >Check-out</button>
-      <input type="hidden" name="id" value="{{ book.pk }}">
-      </form>
+      {% if not request.user.is_staff %}
+        <form method="POST" action="{% url 'catalog_app:check_out_book' %}">
+          {% csrf_token %}
+          <button >Check-out</button>
+          <input type="hidden" name="id" value="{{ book.pk }}">
+        </form>
+      {% endif %}
     {% endfor %}
   </ul>
   {% else %}
