--- a/catalog_app/templates/base.html
+++ b/catalog_app/templates/base.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- Add additional CSS in static file -->
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
@@ -25,6 +24,8 @@
           {% endif %}
         </ul>
         <button onclick="location.href='{% url 'login_app:logout' %}'">Logout</button>
+        <button onclick="location.href='{% url 'login_app:request_password_reset' %}'">Reset Password</button>
+        <button onclick="location.href='{% url 'login_app:delete_account' %}'">Delete Account</button>
       {% endblock %}
       </div>
       <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
